<resources>
    <string name="app_name">Pachin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_code_here">Enter Your Code Here</string>
    <string name="the_code_used_only_once">The Code Used Only Once</string>
    <string name="ok">OK</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_password">New Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="change_password">Change Password</string>
    <string name="do_not_have_account_yet">Do not have account yet?</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="password">Password</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="please_sign_in">Please Sign in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="verification_code">Verification Code</string>
    <string name="recharge">Recharge</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="select_language">Select Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="signing_out">ٍSigning out?</string>
    <string name="name">Name:</string>
    <string name="phone_number2">Phone Number:</string>
    <string name="balance">Balance</string>
    <string name="points">Points</string>
    <string name="close_app">Double click to close app</string>
    <string name="error">Error!</string>
    <string name="enter_phone_number_correct">Enter Your Phone Number Correct</string>
    <string name="enter_password_correct">Enter Your Password Correct</string>
    <string name="enter_first_name">Enter Your First Name Correct</string>
    <string name="enter_last_name">Enter Your Last Name Correct</string>
    <string name="enter_pass_conf">Enter Your Password Confirmation Correct</string>
    <string name="enter_ver_code">Enter Your Verification Code Correct</string>
    <string name="enter_code">Enter Your Code Correct</string>
    <string name="loading">Loading ...</string>
</resources>