<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment"
    android:background="@drawable/image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="85dp"
            android:src="@drawable/logo"/>

        <TextView
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/welcome_back"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:textColor="@color/white"
            android:textSize="35sp"
            android:text="@string/please_sign_in"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:layout_margin="20sp"
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_style"
            android:hint="@string/your_phone_number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="10dp"
            android:gravity="center"
            android:inputType="number"
            />
        <EditText
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/white"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_style"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:padding="10dp"
            android:gravity="center"
            android:inputType="textPassword"
            />

        <TextView
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20sp"
            android:padding="10dp"
            android:layout_gravity="end"
            android:id="@+id/tv_fp"
            android:textColor="@color/white"
            android:text="@string/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_sign_in"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_marginStart="50sp"
            app:backgroundTint="@color/orange_dark"
            android:background="@drawable/et_style"
            android:layout_marginEnd="50sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:text="@string/do_not_have_account_yet"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_signup"
            android:textSize="20sp"
            android:clickable="true"
            android:text="@string/sign_up"
            android:textColor="@color/orange"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.compose.ui.platform.ComposeView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/compose_view_login"
        />

</androidx.constraintlayout.widget.ConstraintLayout>