<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".secondfragments.SettingsFragment"
    android:background="@drawable/image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <ImageView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="85dp"
        android:src="@drawable/logo"/>

        <TextView
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/select_language"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:layout_weight="1"
                android:id="@+id/bt_arabic"
                android:text="@string/arabic"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                app:backgroundTint="@color/orange_dark"
                android:background="@drawable/et_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
            <Button
                android:layout_weight="1"
                android:id="@+id/bt_english"
                android:text="@string/english"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                app:backgroundTint="@color/orange_dark"
                android:background="@drawable/et_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <TextView
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/signing_out"
            android:textStyle="italic"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:layout_gravity="center"
            android:id="@+id/sign_out"
            android:text="@string/sign_out"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            app:backgroundTint="@color/orange_dark"
            android:background="@drawable/et_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>