<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".secondfragments.ExpsFragment"
    android:background="@drawable/image">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="85dp"
        android:src="@drawable/logo"/>

        <EditText
            android:layout_marginTop="10dp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/white"
            android:id="@+id/et_code_exps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_style"
            android:hint="@string/enter_your_code_here"
            android:textColorHint="@color/white"
            android:padding="10dp"
            android:gravity="center"
            />
        <TextView
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20sp"
            android:padding="10dp"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:text="@string/the_code_used_only_once"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_OK_exps"
            android:text="@string/ok"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            app:backgroundTint="@color/orange_dark"
            android:background="@drawable/et_style"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>