<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".secondfragments.ScoreFragment"
    android:background="@drawable/image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <ImageView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="85dp"
        android:src="@drawable/logo"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_advs"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_main"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:listitem="@layout/item_adv"
            android:orientation="horizontal"
            app:spanCount="1"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            />

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView

                android:textColor="@color/orange"
                android:textSize="20dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:gravity="start"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tv_profile_name"
                android:textColor="@color/orange"
                android:text="Zeyad Elshaer"
                android:textStyle="bold"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/orange"
                android:textSize="20dp"
                android:text="@string/phone_number2"
                android:textStyle="bold"
                android:gravity="start"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tv_phone_number_score"
                android:textColor="@color/orange"
                android:text="01159699441"
                android:textStyle="bold"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        
     <com.google.android.material.card.MaterialCardView
         android:layout_marginTop="50dp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="2dp"

         app:cardCornerRadius="10dp"
         android:orientation="vertical"
         >

         <LinearLayout

             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >


             <LinearLayout
                 android:layout_margin="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_balance_wallet"
                    />
                 <TextView
                     android:id="@+id/tv_balance"
                     android:textColor="@color/black"
                     android:text="@string/balance"
                     android:layout_marginLeft="10dp"
                     android:textSize="18dp"
                     android:textStyle="italic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />

             </LinearLayout>



             <LinearLayout
                 android:layout_margin="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">

                 <TextView
                     android:id="@+id/tv_points_number"
                     android:textColor="@color/black"
                     android:text="500000"
                     android:layout_marginLeft="10dp"
                     android:textSize="18dp"
                     android:textStyle="italic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
                 <TextView
                     android:id="@+id/tv_points"
                     android:textColor="@color/black"
                     android:text="@string/points"
                     android:layout_marginRight="5dp"
                     android:layout_marginLeft="5dp"
                     android:textSize="18dp"
                     android:textStyle="italic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />



             </LinearLayout>




         </LinearLayout>



     </com.google.android.material.card.MaterialCardView>








        
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>